fixed the responsiveness of countdown title and livestream title in the show + reduced the lendgt of the message box in the chat when viewing on mobile so it does not look weird

--- a/app/assets/stylesheets/components/_video.scss
+++ b/app/assets/stylesheets/components/_video.scss
@@ -137,8 +137,7 @@
 }
 
 .countdown-title {
-  // background: rgba(255,255,255,0.7);
-  width: 1200px;
+  // width: 680px;
   height: 300px;
   padding: 30px;
   border-radius: 5px;
@@ -155,8 +154,19 @@
 }
 
 .video-title {
- width: 800px;
- margin: auto;
+  // width: auto;
+  margin: auto;
+  font-size: 30px;
+  // @media (max-width: 767px) {
+  //   h2{
+  //     font-size: 20px;
+  //   }
+  // }
+  // @media (min-width:1025px) {
+  //   h2{
+  //     font-size: 30px;
+  //   }
+  // }
 }
 
 .viewers {
